# mn-dhs-encounter-toolkit

./: .gitignore  KNOWN_LIMITATIONS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: ARCHITECTURE.md  CASE_STUDY.md  LAYER3_GAP_RESOLUTION.md  PEER_REVIEW_ACTION_PLAN.md  PEER_REVIEW_ROUND2_ACTION_PLAN.md  QA_VS_DHS_TEST.md  RULE_SOURCE_TRACE.md  SPEC.md  VALIDATION_LAYERS.md
docs/images/: README.md
docs/reference/: DOCUMENT_INDEX.md  dhs_encounter_data_landing.html  dhs_encounter_data_landing_rendered.md  mucg_index_403_antibot_challenge_page.html  mucg_index_cached_snapshot.md
examples/: README.md  clean_batch.x12  clean_batch_validation.json  err_missing_umpi.x12  err_missing_umpi_validation.json
qa-uat/: AGENTS.md  BLACK_BOX_INTERFACE.md  PROVENANCE.md  README.md
qa-uat/authoritative-context/: REQUIREMENTS_SUMMARY.md  SOURCES.md
qa-uat/registry/: TEST_CASE_INDEX.md
qa-uat/reports/: qa_execution_2026-07-02.md  uat_signoff_2026-07-02.md
qa-uat/scripts/: record_execution.py  uat_ui_runner.py
qa-uat/test-cases/: TC_CASE_HEADER.md
qa-uat/test-data/: manifest.yaml
qa-uat/test-plans/: QA_MASTER_TEST_PLAN.md  UAT_MASTER_TEST_PLAN.md
scripts/: annotate_dhs_companion_pdf.py  capture_portfolio_screenshots.py  generate_rule_source_trace.py
src/mn_encounter_toolkit/: __init__.py
tests/: conftest.py
tests/integration/: test_cli.py  test_pipeline.py
tests/unit/: test_consistency.py  test_gen_835e.py  test_gen_999.py  test_identifiers.py  test_layer1_envelope.py  (+8 more)
ui/: app.py
(+72 files in other folders)
