[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mn-encounter-toolkit"
version = "0.1.0"
description = "Synthetic data generation, validation, and 999/835E response generation for MN DHS MCO encounter (837P/837I) submissions"
requires-python = ">=3.11"
readme = "README.md"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]
ui = ["streamlit>=1.32"]

[project.scripts]
mn-encounter = "mn_encounter_toolkit.cli.main:main"
mn-encounter-ui = "mn_encounter_toolkit.web.entry:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
